--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,16 @@
-title: Minimal theme
-logo: assets/img/Poorna Chandrika.jpeg
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: <p align="center"> Poorna Chandrika Nolli </p>
+logo: /assets/img/Poorna Chandrika.jpeg
+
+description:
+  <p align="center">
+  <a href="https://www.linkedin.com/in/poorna-chandrika-nolli-281609254/">LinkedIn</a> |
+  <a href="https://github.com/PoornaChandrikaNolli">GitHub</a>
+  
+  <br>   
+  I'm working on Software Development in Zeta.
+  <br>
+  </p>
+
+
+
 theme: jekyll-theme-minimal
